[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "(^llm_sdk/)|(^\\.venv/)"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".venv", "llm_sdk"]
